<resources>
    <string name="app_name">Le Citoyen</string>
    <string name="setting_name">Réglages</string>
    <string name="unsub">Se désinscrire</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="space"> </string>
    <string name="plurial">s</string>
    <string name="complete_date_format">EEE, dd MMM yyyy HH</string>
    <string name="long_date_format">dd MMM yyyy HH:MM:ss</string>
    <string name="short_date_format_with_year">dd MMM yyyy</string>
    <string name="short_date_format_without_year">dd MMM</string>
    <string name="time_format">HH:MM</string>
    <string name="time_format_with_seconds">HH:MM:ss</string>
    <string name="time_short_second">s</string>
    <string name="time_long_second">seconde</string>
    <string name="time_long_seconds">secondes</string>
    <string name="time_short_minute">m</string>
    <string name="time_long_minute">minute</string>
    <string name="time_long_minutes">minutes</string>
    <string name="time_short_hour">h</string>
    <string name="time_long_hour">heure</string>
    <string name="time_long_hours">heures</string>
    <string name="text_time_ago">Il y a </string>
    <string name="text_time_the">Le </string>
    <string name="text_time_at"> à </string>
    <string name="fragment_main_auth">Bienvenue</string>
    <string name="fragment_login_account">Se connecter</string>
    <string name="fragment_create_account">Creer un compte</string>
    <string name="fragment_forgot_account">Mot de passe oublié</string>
    <string name="fragment_forum">Forum</string>
    <string name="fragment_add_post">Ajouter une publication</string>
    <string name="fragment_newsfeed_public_profil">Profil publique</string>
    <string name="fragment_search">Rechercher</string>
    <string name="fragment_create_event">Créer un événement</string>
    <string name="fragment_do_search">Rechercher</string>
    <string name="fragment_cityfeed">Ville</string>
    <string name="fragment_cityfeed_news">Nouvelles</string>
    <string name="fragment_cityfeed_services">Services aux citoyens</string>
    <string name="fragment_cityfeed_activity">Activité et loisirs</string>
    <string name="fragment_cityfeed_city">Ville et vie démocratique</string>
    <string name="fragment_messages">Messages</string>
    <string name="fragment_profil">Profil</string>
    <string name="fragment_profil_repost">Partager</string>
    <string name="fragment_profil_like">Aimer</string>
    <string name="fragment_edit_profil">Modifier profil</string>
    <string name="fragment_edit_profil_email">Changer email</string>
    <string name="fragment_edit_profil_phone">Changer téléphone</string>
    <string name="fragment_main_user_settings">Paramètres</string>
    <string name="fragment_change_password">Changer mot de passe</string>
    <string name="fragment_delete_account">Supprimer votre compte</string>
    <string name="fragment_verify_account">Verifier votre compte</string>
    <string name="channel_name">channel_new_post</string>
    <string name="channel_description">new post was added</string>
    <string name="textview_post">publication</string>
    <string name="textview_follower">abonné</string>
    <string name="textview_following">abonnement</string>
    <string name="textview_forgot_password">Mot de passe oublié?</string>
    <string name="textview_verify_account">Vérifier votre compte</string>
    <string name="long_subtitle_app_mission">Une place pour partager ses créations et regarder les dernières nouvelles de la ville</string>
    <string name="long_subtitle_forgot_account">"Vous avez oublié votre mot de passe? \n\nVous n'avez qu'à entrer votre addresse courriel dans le champ si-dessus. Vous recevrez un courriel sous peu."</string>
    <string name="event_type_music">Musique</string>
    <string name="event_type_art">Art</string>
    <string name="event_type_photography">Photographie</string>
    <string name="event_type_other">Autres</string>
    <string name="email">Adresse courriel</string>
    <string name="new_email">Nouvelle adresse courriel</string>
    <string name="email_again">Adresse courriel, un autre fois</string>
    <string name="password">Mot de passe</string>
    <string name="password_again">Mot de passe, encore un fois</string>
    <string name="password_verification">Vérification du mot de passe</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="new_password_again">Nouveau mot de passe</string>
    <string name="name">Nom</string>
    <string name="user_name">Nom d\'utilisateur unique</string>
    <string name="biography">Biographie</string>
    <string name="location">Emplacement</string>
    <string name="phone_number">Téléphone</string>
    <string name="add_phone_number">Ajouter ton numéro de téléphone</string>
    <string name="button_cancel">Annuler</string>
    <string name="button_delete">Supprimer</string>
    <string name="button_create_account">Créer un compte</string>
    <string name="button_delete_account">Suprimer votre compte</string>
    <string name="button_signin">Se connecter</string>
    <string name="button_signout">Se déconnecter</string>
    <string name="button_signin_email_account">Connexion avec Email</string>
    <string name="button_signin_facebook_account">Connexion avec Facebook</string>
    <string name="button_email_reinitialization">Envoyer</string>
    <string name="button_change_password">Changer de mot de passe</string>
    <string name="button_verify_account">Vérifier votre compte</string>
    <string name="adapter_post_is_modify">(modifié)</string>
    <string name="dialog_post_history_title">Historique</string>
    <string name="dialog_post_history_post_original">Publication originale</string>
    <string name="dialog_post_history_post_number">Modification</string>
    <string name="dialog_delete_title">Supprimer publication</string>
    <string name="dialog_delete_message">Êtes-vous certain de vouloir tout supprimer?</string>
    <string name="toast_email_field_empty">Aucun email</string>
    <string name="toast_password_field_empty">Aucun mot de passe</string>
    <string name="toast_email_incorrect">Email incorrect</string>
    <string name="toast_reset_password_sent">Nous avons envoyez les instructions pour réinitialiser votre mot de passe</string>
    <string name="toast_reset_password_fail">Échec lors de l\'envoie du courriel</string>
    <string name="toast_password_different">Mot de passes different</string>
    <string name="toast_email_auth_fail">Échec d\'authentification avec email</string>
    <string-array name="user_settings_not_verify">
        <item>Vérifier votre comptre</item>
        <item>Changer mot de passe</item>
        <item>Supprimer votre compte</item>
        <item>Se déconnecter</item>
    </string-array>
    <string-array name="user_settings_verify">
        <item>Changer mot de passe</item>
        <item>Supprimer votre compte</item>
        <item>Se déconnecter</item>
    </string-array>
    <string-array name="public_more_choice_list">
        <item>Historique</item>
    </string-array>
    <string-array name="private_more_choice_list">
        <item>Historique</item>
        <item>Modifer</item>
        <item>Supprimer</item>
    </string-array>
    <string name="edit_profil_title">Établir photo de profil</string>
    <string-array name="edit_profil_change_photo">
        <item>Prendre un photo</item>
        <item>Importer photo</item>
        <item>Supprimer photo</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_settings">Settings</string>
    <string name="facebook_app_id">560391421079404</string>
    <string name="fb_login_protocol_scheme">fb560391421079404</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="ca_uqac_fab_behavior">ca.uqac.lecitoyen.helpers.ScrollingFabBehavior</string>
    <string name="ca_uqac_fab_menu_behavior">ca.uqac.lecitoyen.helpers.ScrollingFabMenuBehavior</string>
    <string name="ca_uqac_profil_image_behavior">ca.uqac.lecitoyen.helpers.ProfilPcitureBehavior</string>
    <string name="activity_settings_title">Paramètres</string>
    <string name="activity_settings_delete_account">Supprimer compte</string>
    <string name="activity_settings_signout_account">Se déconnecter</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_post_expand_audio">PostExpandAudioActivity</string>
</resources>