<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--    APP TITLE   -->
            <TextView
                android:id="@+id/main_auth_frag_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/i_triadic_r_700"
                android:textSize="36sp"
                android:textStyle="bold" />

            <!--    APP SUBTITLE   -->
            <TextView
                android:id="@+id/main_auth_frag_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/long_subtitle_app_mission"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="italic"
                android:textColor="@color/black_500"/>

            <Button
                android:id="@+id/main_auth_frag_email_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/button_signin_email_account"
                android:textSize="16sp" />

            <Button
                android:id="@+id/main_auth_frag_facebook_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/button_signin_facebook_account"
                android:textSize="16sp"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/main_auth_frag_password_forgotten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/textview_forgot_password"
                android:textColor="@color/i_analogous_p_900"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/main_auth_frag_create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="16dp"
            android:text="@string/button_create_account" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>